--- a/blogproject/templates/base.html
+++ b/blogproject/templates/base.html
@@ -157,6 +157,33 @@
         </div>
     </div>
 </div>
+{% if is_paginated %}
+<div class="pagination">
+  {% if first %}
+    <a href="?page=1">1</a>
+  {% endif %}
+  {% if left %}
+    {% if left_has_more %}
+        <span>...</span>
+    {% endif %}
+    {% for i in left %}
+        <a href="?page={{ i }}">{{ i }}</a>
+    {% endfor %}
+  {% endif %}
+  <a href="?page={{ page_obj.number }}" style="color: red">{{ page_obj.number }}</a>
+  {% if right %}
+    {% for i in right %}
+        <a href="?page={{ i }}">{{ i }}</a>
+    {% endfor %}
+    {% if right_has_more %}
+        <span>...</span>
+    {% endif %}
+  {% endif %}
+  {% if last %}
+    <a href="?page={{ paginator.num_pages }}">{{ paginator.num_pages }}</a>
+  {% endif %}
+</div>
+{% endif %}
 <footer id="site-footer">
     <div class="container">
         <div class="row">
