--- a/blogproject/templates/blog/index.html
+++ b/blogproject/templates/blog/index.html
@@ -27,25 +27,36 @@
 <div class='no-post'>暂无数据</div>
 {% endfor %}
 
-                <!-- 简单分页效果
-                <div class="pagination-simple">
-                    <a href="#">上一页</a>
-                    <span class="current">第 6 页 / 共 11 页</span>
-                    <a href="#">下一页</a>
-                </div>
-            -->
-            {% if is_paginated %}
-<div class="pagination-simple">
-  <!-- 如果当前页还有上一页，显示一个上一页的按钮 -->
-  {% if page_obj.has_previous %}
-    <a href="?page={{ page_obj.previous_page_number }}">上一页</a>
-  {% endif %}
-  <!-- 显示当前页面信息 -->
-  <span class="current">第 {{ page_obj.number }} 页 / 共 {{ paginator.num_pages }} 页</span>
-  <!-- 如果当前页还有下一页，显示一个下一页的按钮 -->
-  {% if page_obj.has_next %}
-    <a href="?page={{ page_obj.next_page_number }}">下一页</a>
-  {% endif %}
-</div>
-{% endif %}
-            {% endblock main %}
+    {% comment %}
+    完善的分页导航
+    {% endcomment %}
+    {% if is_paginated %}
+        <div class="pagination">
+            <ul>
+                {% if first %}
+                    <li><a href="?page=1">1</a></li>
+                {% endif %}
+                {% if left %}
+                    {% if left_has_more %}
+                        <li><span>...</span></li>
+                    {% endif %}
+                    {% for i in left %}
+                        <li><a href="?page={{ i }}">{{ i }}</a></li>
+                    {% endfor %}
+                {% endif %}
+                <li class="current"><a class="current-page" href="?page={{ page_obj.number }}">{{ page_obj.number }}</a></li>
+                {% if right %}
+                    {% for i in right %}
+                        <li><a href="?page={{ i }}">{{ i }}</a></li>
+                    {% endfor %}
+                    {% if right_has_more %}
+                        <li><span>...</span></li>
+                    {% endif %}
+                {% endif %}
+                {% if last %}
+                    <li><a href="?page={{ paginator.num_pages }}">{{ paginator.num_pages }}</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    {% endif %}
+          {% endblock main %}
