--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -77,27 +77,13 @@
     </section>
 {% endblock main %}
 
-{%block toc %}
+{% block toc %}
+  {% if post.toc %}
     <div class="widget widget-content">
         <h3 class="widget-title">文章目录</h3>
-        <ul>
-            <li>
-                <a href="#">教程特点</a>
-            </li>
-            <li>
-                <a href="#">谁适合这个教程</a>
-            </li>
-            <li>
-                <a href="#">在线预览</a>
-            </li>
-            <li>
-                <a href="#">资源列表</a>
-            </li>
-            <li>
-                <a href="#">获取帮助</a>
-            </li>
-        </ul>
+        {{ post.toc|safe }}
     </div>
+    {% endif %}
     <div class="widget widget-recent-posts">
         <h3 class="widget-title">最新文章</h3>
         <ul>
