--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load blog_extras %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -105,6 +106,13 @@
             <aside class="col-md-4">
                 {% block toc %}
                 {% endblock toc %}
+                {% show_recent_posts %}
+  {% show_archives %}
+  {% show_categories %}
+  {% show_tags %}
+  <div class="rss">
+    <a href=""><span class="ion-social-rss-outline"></span> RSS 订阅</a>
+ </div>
             </aside>
         </div>
     </div>
